[package]
name = "csharp_binder"
version = "0.2.2"
authors = ["Deukhoofd <Deukhoofd@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library to generate C# bindings for a Rust foreign function interface (FFI)"
homepage = "https://github.com/Deukhoofd/csharp_binder/"
repository = "https://github.com/Deukhoofd/csharp_binder/"
readme = "README.md"
keywords = ["ffi", "csharp", "bindgen", "binding"]
categories = ["external-ffi-bindings"]

[dependencies]
"syn" = {version = "1.0.60", features=["full"]}
"proc-macro2" = {version= "1.0", features=["span-locations"]}